--- a/week-10/1-postgres-simple/tsconfig.json
+++ b/week-10/1-postgres-simple/tsconfig.json
@@ -5,7 +5,8 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./src/dist" 
   },
   "include": ["src/**/*"]
 }
