--- a/week-3/03-mongo/package.json
+++ b/week-3/03-mongo/package.json
@@ -1,9 +1,10 @@
 {
   "name": "03-mongo",
-  "version": "1.0.0",
+  "version": "1.0.0", 
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
