--- a/week-3/01-middlewares/package.json
+++ b/week-3/01-middlewares/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3"
+    "jsonwebtoken": "^9.0.2",
+    "supertest": "^6.3.4"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
