--- a/week-7(assigment)/component-asgmnt/package.json
+++ b/week-7(assigment)/component-asgmnt/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "lorem-ipsum": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
