--- a/week-3/04-mongo-with-jwt-auth/package.json
+++ b/week-3/04-mongo-with-jwt-auth/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.0.3",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.2"
