--- a/week-3/03-mongo/package.json
+++ b/week-3/03-mongo/package.json
@@ -13,8 +13,9 @@
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
     "express": "^4.18.2",
     "jest": "^29.7.0",
-    "mongoose": "^8.0.3",
+    "mongoose": "^8.1.3",
     "supertest": "^6.3.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "zod": "^3.22.4"
   }
 }
