--- a/week-3/03-mongo/package.json
+++ b/week-3/03-mongo/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "mongoose": "^8.0.3",
