--- a/week-14/class 2/code-along/.env
+++ b/week-14/class 2/code-along/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://avnadmin:AVNS_0JzU278CjYVdqU42y1b@shiv-avien-shivanandasai-a088.a.aivencloud.com:13870/defaultdb?sslmode=require"
+DATABASE_URL=""
